--- a/Resources/Private/Templates/Preview/Preview.html
+++ b/Resources/Private/Templates/Preview/Preview.html
@@ -1,4 +1,4 @@
-<h1>
+<h2 style="margin-top:0;">
     Zoller Text Media
     <f:if condition="{pi_flexform_transformed.settings.type} == 'mleft'">
         (Medium links)
@@ -6,7 +6,7 @@
     <f:if condition="{pi_flexform_transformed.settings.type} == 'mright'">
         (Medium rechts)
     </f:if>
-</h1>
+</h2>
 
 <f:format.html>{pi_flexform_transformed.settings.text}</f:format.html>
 <f:if condition="{pi_flexform_transformed.settings.img1}">
