--- a/Resources/Private/Templates/Preview/Preview.html
+++ b/Resources/Private/Templates/Preview/Preview.html
@@ -1,5 +1,5 @@
 <h2 style="margin-top:0;">
-    Zoller Text Media
+    Text Media
     <f:if condition="{pi_flexform_transformed.settings.type} == 'mleft'">
         (Medium links)
     </f:if>
