--- a/Resources/Public/css/fsf_zoller_textmedia.css
+++ b/Resources/Public/css/fsf_zoller_textmedia.css
@@ -1,11 +1,36 @@
 .fsf-zoller-textmedia {
-    margin-bottom: 250px !important;
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 1920px;
+}
+
+.fsf-zoller-textmedia-wrapper {
+    min-height: 100vh;
+}
+
+.fsf-zoller-textmedia .col-xl-5,
+.fsf-zoller-textmedia .col-xl-7 {
+    min-height: 100vh;
+}
+
+.fsf-zoller-textmedia-wrapper.withborder .col-xl-5,
+.fsf-zoller-textmedia-wrapper.withborder .col-xl-7 {
+    min-height: calc(100vh - 100px);
+}
+
+.fsf-zoller-textmedia-wrapper.withborder {
+    border: 50px solid #dadada;
+}
+
+.fsf-zoller-textmedia-wrapper.withborder.yellow-border {
+    border: 50px solid #f0e600;
 }
 
 .fsf-zoller-textmedia .image-left,
 .fsf-zoller-textmedia .image-right {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .fsf-zoller-textmedia .video-container {
@@ -19,9 +44,9 @@
 }
 
 .fsf-zoller-textmedia .youtube-container .play-btn {
-    width: 60px;
-    height: 60px;
-    background-image: url("play.svg");
+    width: 230px;
+    height: 230px;
+    background-image: url("play-button.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -51,10 +76,38 @@
     padding-top: 56.25%;
     display: block;
     width: 100%;
+    height: 100%;
     position: relative;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+}
+
+.fsf-zoller-textmedia .text-wrapper {
+    position: relative;
+    top: 50%;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 130px;
+    padding-right: 130px;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+}
+
+.fsf-zoller-textmedia .text-wrapper h1 {
+    font-size: 100px;
+    line-height: 100px;
+    margin-bottom: 40px;
+    font-weight: 500;
+}
+
+.fsf-zoller-textmedia .text-wrapper p {
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 500;
 }
 
 @media (hover: hover) {
@@ -65,6 +118,63 @@
 }
 
 @media (max-width: 1200px) {
+    .fsf-zoller-textmedia .text-wrapper {
+        position: relative;
+        top: inherit;
+        padding-left: 23px;
+        padding-right: 23px;
+        transform: inherit;
+        -webkit-transform: inherit;
+        -moz-transform: inherit;
+        -ms-transform: inherit;
+        -o-transform: inherit;
+        padding-top: 30px;
+    }
+
+    .fsf-zoller-textmedia .youtube-container .play-btn {
+        width: 100px;
+        height: 100px;
+    }
+
+    .fsf-zoller-textmedia .text-wrapper h1 {
+        font-size: 48px;
+        line-height: 56px;
+        margin-bottom: 32px;
+        font-weight: 500;
+    }
+
+    .fsf-zoller-textmedia .text-wrapper p {
+        font-size: 20px;
+        line-height: 28px;
+        font-weight: 500;
+    }
+
+    .fsf-zoller-textmedia-wrapper {
+        min-height: inherit;
+    }
+
+    .fsf-zoller-textmedia-wrapper.withborder.yellow-border {
+        border: 17px solid #f0e600;
+    }
+
+    .fsf-zoller-textmedia-wrapper.withborder {
+        border: 17px solid #dadada;
+    }
+
+    .fsf-zoller-textmedia {
+        min-height: inherit;
+    }
+
+    .fsf-zoller-textmedia-wrapper.withborder .col-xl-5,
+    .fsf-zoller-textmedia-wrapper.withborder .col-xl-7 {
+        min-height: inherit;
+    }
+
+    .fsf-zoller-textmedia .col-xl-5,
+    .fsf-zoller-textmedia .col-xl-7 {
+        min-height: inherit;
+    }
+
     .fsf-zoller-textmedia .video-container iframe {
         width: 100%;
         min-height: 365px;
@@ -98,14 +208,11 @@
 
     .fsf-zoller-textmedia .text-element-left {
         margin-bottom: 40px;
+        order: 2;
     }
 
     .fsf-zoller-textmedia .text-element-right {
         margin-top: 40px;
-    }
-
-    .fsf-zoller-textmedia {
-        margin-bottom: 50px !important;
     }
 
     .fsf-zoller-textmedia .image-left,
@@ -130,4 +237,3 @@
     bottom: 0;
     right: 0;
 }
-
